syntax = "proto3";

package cloudberry;

service CloudberryStorage {
    rpc InitBucket (InitBucketRequest) returns (Empty);
    rpc DestroyBucket (DestroyBucketRequest) returns (Empty);
    rpc PutEntry (PutEntryRequest) returns (Empty);
    rpc RemoveEntry (RemoveEntryRequest) returns (Empty);
    rpc Find (FindRequest) returns (FindResponse);
}

message InitBucketRequest {
    string bucket_uuid = 1;
}

message FindRequest {
    string query = 1;
    string bucket_uuid = 2;
    repeated Coefficient parameters = 3;
    int64 count = 4;
}

message FindResponse {
    repeated FindResponseEntry entries = 1;
}

message FindResponseEntry {
    string content_uuid = 1;
    repeated Metric metrics = 2;
}

message Coefficient {
    Parameter parameter = 1;
    double value = 2;
}

message Metric {
    Parameter parameter = 1;
    double value = 2;
}

enum Parameter {
    SEMANTIC_ONE_PEACE_SIMILARITY = 0;
    RECOGNIZED_TEXT_SIMILARITY = 1;
    TEXTUAL_DESCRIPTION_SIMILARITY = 2;
    RECOGNIZED_FACE_SIMILARITY = 3;
    RECOGNIZED_TEXT_BM25_RANK = 4;
    TEXTUAL_DESCRIPTION_BM25_RANK = 5;
}

message DestroyBucketRequest {
    string bucket_uuid = 1;
}

message ContentMetadata {
    string content_uuid = 1;
    string bucket_uuid = 2;
    string extension = 3;
    string description = 4;
}

message PutEntryRequest {
    ContentMetadata metadata = 1;
    bytes data = 2;
}

message RemoveEntryRequest {
    string content_uuid = 1;
    string bucket_uuid = 2;
}

message Empty {}
